--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,7 +12,13 @@ body {
 	font-family: "Open Sans", sans-serif;
 	color: #272829;
 }
-
+canvas {
+	position: absolute;
+	left: 0;
+	top: 0;
+	z-index: -1;
+	width: vw;
+}
 a {
 	color: #149ddd;
 	text-decoration: none;
@@ -229,7 +235,6 @@ h6 {
 	height: 100vh;
 	/* background: url("../img/hero-bg.jpg") top center;
   background-size: cover; */
-	background-color: black;
 }
 
 #hero:before {
